--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
-    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()" />
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(self), camera=()" />
     
     <!-- Resource Hints -->
     <link rel="dns-prefetch" href="https://wwajmaohwcbooljdureo.supabase.co" />
