--- a/index.html
+++ b/index.html
@@ -48,10 +48,21 @@
     <!-- Service Worker Registration -->
     <script>
       if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
-            .then(reg => console.log('✅ Service Worker registered'))
-            .catch(err => console.log('❌ Service Worker registration failed:', err));
+        window.addEventListener('load', async () => {
+          try {
+            const existingRegistration = await navigator.serviceWorker.getRegistration();
+            const hasExpectedWorker = existingRegistration?.active?.scriptURL?.endsWith('/sw.js');
+
+            if (!existingRegistration || !hasExpectedWorker) {
+              await navigator.serviceWorker.register('/sw.js');
+              console.log('✅ Service Worker registered');
+            } else {
+              await existingRegistration.update();
+              console.log('✅ Service Worker already registered');
+            }
+          } catch (err) {
+            console.log('❌ Service Worker registration failed:', err);
+          }
         });
       }
     </script>
