--- a/apps/omnihub-site/index.html
+++ b/apps/omnihub-site/index.html
@@ -15,6 +15,15 @@
     rel="stylesheet" />
   <title>APEX OmniHub - Intelligence, Designed.</title>
 
+  <!-- FOUC Prevention: Set theme before render -->
+  <script>
+    (function () {
+      var theme = localStorage.getItem('theme');
+      if (!theme) theme = 'light';
+      document.documentElement.setAttribute('data-theme', theme);
+    })();
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="APEX OmniHub — Intelligence, Designed." />
   <meta property="og:description"
