docs: clarify omnihub-site icon and vercel notes

--- a/apps/omnihub-site/request-access.html
+++ b/apps/omnihub-site/request-access.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Request Access | APEX OmniHub" />
     <meta property="og:description" content="Join the APEX OmniHub early access program. Request your invite today." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/apex-omnihub-icon.png" />
     <link rel="canonical" href="https://apexomnihub.icu/request-access.html" />
     <title>Request Access | APEX OmniHub</title>
   </head>
