--- a/apps/omnihub-site/restricted.html
+++ b/apps/omnihub-site/restricted.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This area requires authorization. Request access to APEX OmniHub." />
     <meta name="theme-color" content="#0f1729" />
     <meta name="robots" content="noindex, nofollow" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/apex-omnihub-icon.png" />
     <title>Restricted | APEX OmniHub</title>
   </head>
   <body>
