--- a/apps/omnihub-site/tech-specs.html
+++ b/apps/omnihub-site/tech-specs.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Technical Specifications | APEX OmniHub" />
     <meta property="og:description" content="Evidence-first architecture, security posture, and detailed technical specifications." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/apex-omnihub-icon.png" />
     <link rel="canonical" href="https://apexomnihub.icu/tech-specs.html" />
     <title>Tech Specs | APEX OmniHub</title>
   </head>
