--- a/apps/omnihub-site/demo.html
+++ b/apps/omnihub-site/demo.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Demo | APEX OmniHub" />
     <meta property="og:description" content="See APEX OmniHub in action. Watch the demo and explore the workflow." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/apex-omnihub-icon.png" />
     <link rel="canonical" href="https://apexomnihub.icu/demo.html" />
     <title>Demo | APEX OmniHub</title>
   </head>
