--- a/apps/omnihub-site/index.html
+++ b/apps/omnihub-site/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="APEX OmniHub - The universal translator + orchestrator that connects AI, enterprise systems, and Web3 through a single controlled port." />
   <meta name="theme-color" content="#0f1729" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/apex-omnihub-icon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -20,7 +20,7 @@
     (function () {
       var theme = localStorage.getItem('theme');
       if (!theme) theme = 'light';
-      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.dataset.theme = theme;
     })();
   </script>
 
