--- a/apps/omnihub-site/terms.html
+++ b/apps/omnihub-site/terms.html
@@ -16,7 +16,7 @@
     (function () {
       var theme = localStorage.getItem('theme');
       if (!theme) theme = 'light';
-      document.documentElement.setAttribute('data-theme', theme);
+      document.documentElement.dataset.theme = theme;
     })();
   </script>
 
