fix: correct branding assets and favicon reference
- Overwrite favicon.png and wordmark with correct PNGs

- Fix index.html to point to /favicon.png

- Remove large unused apex-omnihub-icon.png

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- PWA -->
   <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/apex-omnihub-icon.png" type="image/png" />
+  <link rel="icon" href="/favicon.png" type="image/png" />
   <link rel="alternate icon" href="/favicon.png" type="image/png" />
   <meta name="theme-color" content="#000000" />
   <!-- iOS App Icons -->
