--- a/apps/omnihub-site/index.html
+++ b/apps/omnihub-site/index.html
@@ -7,7 +7,10 @@
   <meta name="description"
     content="APEX OmniHub - The universal translator + orchestrator that connects AI, enterprise systems, and Web3 through a single controlled port." />
   <meta name="theme-color" content="#0f1729" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
