fix(quality): resolve sonarqube code smells (optional chaining, css duplicates)

--- a/apps/omnihub-site/index.html
+++ b/apps/omnihub-site/index.html
@@ -7,7 +7,7 @@
   <meta name="description"
     content="APEX OmniHub - The universal translator + orchestrator that connects AI, enterprise systems, and Web3 through a single controlled port." />
   <meta name="theme-color" content="#0f1729" />
-  <link rel="icon" type="image/svg+xml" href="/apex-badge.svg?v=20260118" />
+  <link rel="icon" type="image/png" href="/icon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
